Removed all RequireAPI annotation,added AI progress bar