@@ -1,15 +1,12 @@
 package com.example.chess.engine.board;
 
-import android.os.Build;
-
-import androidx.annotation.RequiresApi;
-
 import com.example.chess.R;
 import com.example.chess.engine.pieces.Piece;
 import com.example.chess.engine.pieces.PieceType;
 import com.example.chess.engine.board.Move.MoveFactory;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -27,12 +24,10 @@ public final class BoardUtils {
     public static final List<Boolean> SEVENTH_ROW = initRow(48);
     public static final List<Boolean> EIGHTH_ROW = initRow(56);
 
-    @RequiresApi(api = Build.VERSION_CODES.R)
     public static final List<String> ALGEBRAIC_NOTATION = initializeAlgebraicNotation();
 
-    @RequiresApi(api = Build.VERSION_CODES.R)
     private static List<String> initializeAlgebraicNotation() {
-        return List.of(
+        return Collections.unmodifiableList(Arrays.asList(
                 "a8", "b8", "c8", "d8", "e8", "f8", "g8", "h8",
                 "a7", "b7", "c7", "d7", "e7", "f7", "g7", "h7",
                 "a6", "b6", "c6", "d6", "e6", "f6", "g6", "h6",
@@ -40,7 +35,7 @@ public final class BoardUtils {
                 "a4", "b4", "c4", "d4", "e4", "f4", "g4", "h4",
                 "a3", "b3", "c3", "d3", "e3", "f3", "g3", "h3",
                 "a2", "b2", "c2", "d2", "e2", "f2", "g2", "h2",
-                "a1", "b1", "c1", "d1", "e1", "f1", "g1", "h1");
+                "a1", "b1", "c1", "d1", "e1", "f1", "g1", "h1"));
     }
 
     public static int getPieceImage(final Piece piece) {
@@ -107,7 +102,7 @@ public final class BoardUtils {
 
     public static boolean isValidTileCoordinate(final int coordinate) { return coordinate >= 0 && coordinate < NUM_TILES; }
 
-    @RequiresApi(api = Build.VERSION_CODES.R)
+
     public static String getPositionAtCoordinate(final int destinationCoordinate) { return ALGEBRAIC_NOTATION.get(destinationCoordinate); }
 
     public static int mostValuableVictimLeastValuableAggressor(final Move move) {
@@ -130,8 +125,8 @@ public final class BoardUtils {
         }
         return Collections.unmodifiableList(moveHistory);
     }
-    @RequiresApi(api = Build.VERSION_CODES.R)
+
     public static boolean kingThreat(final Move move) { return move.getBoard().currentPlayer().makeMove(move).getLatestBoard().currentPlayer().isInCheck(); }
-    @RequiresApi(api = Build.VERSION_CODES.R)
+
     public static boolean isEndGameScenario(final Board board) { return board.currentPlayer().isInCheckmate() || board.currentPlayer().isInStalemate(); }
 }
